--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,7 @@
             <version>18.0</version>
         </dependency>
 
-        <!-- mysql驱动 -->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
 
-        <!-- mybatisplus与springboot整合 -->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatisplus-spring-boot-starter</artifactId>
-            <version>1.0.5</version>
-        </dependency>
         <!-- MP 核心库 -->
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -75,13 +64,26 @@
             <version>2.1.8</version>
         </dependency>
 
-        <!-- springboot整合mybatis（核心就这一个） -->
-        <!-- 注意顺序，这个一定要放在最下面 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.1</version>
+            <version>1.3.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatisplus-spring-boot-starter</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+
+
 
     </dependencies>
 
