--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.jinxin</groupId>
     <artifactId>com.jinxin.employee</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -24,6 +25,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>8.0.36</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -102,8 +116,16 @@
                 </configuration>
             </plugin>
         </plugins>
-
+        <!--
         <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/webapp</directory>
+                <targetPath>META-INF/resources</targetPath>
+            </resource>
+
             <resource>
                 <directory>src/main/java</directory>
                 <filtering>false</filtering>
@@ -116,11 +138,12 @@
                 <filtering>false</filtering>
                 <includes>
                     <include>*.yml</include>
-                    <include>templates/*.jsp</include>
+                    <include>WEB-INF/*</include>
                     <include>db/migration/*.sql</include>
                 </includes>
             </resource>
         </resources>
+        -->
     </build>
 
 </project>
