依赖包添加、页面数据的展示

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,10 +13,10 @@ spring:
     ignore-missing-migrations: true
     out-of-order: true
     validate-on-migrate: true
-  thymeleaf:
-    cache: false
-    prefix: /WEB-INF/views/
-    suffix: .jsp
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
 mybatis-plus:
   mapper-locations: classpath*:/mapper/xml/**Mapper.xml
   global-config:
