从业人员管理模块

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ spring:
       prefix: /WEB-INF/views/
       suffix: .jsp
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/xml/**Mapper.xml
+  mapper-locations: classpath:/com/jinxin/employee/application/mapper/**/xml/*Mapper.xml
   global-config:
       id-type: 0
       field-strategy: 2
